# newsletter-api

./: Cargo.toml
.github/workflows/: audit-on-push.yml  general.yml  scheduled-audit.yml
scripts/: init_db.ps1  init_db.sh
src/: lib.rs  main.rs
tests/: health_check.rs
