[package]
name = "newsletter_api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter_api"


[dependencies]
actix-web = "4.2.1"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11.14"

